--- a/src/styles/layouts/_layouts.scss
+++ b/src/styles/layouts/_layouts.scss
@@ -1,12 +1,12 @@
 #layout-default {
-    @apply relative flex flex-col h-auto min-h-screen;
+    @apply relative flex flex-col h-auto min-h-screen w-full;
 
     header.header {
         @apply flex flex-row justify-between items-center w-full h-28 bg-red-200 px-20 backdrop-blur-[10px];
     }
 
     main.main {
-        @apply flex flex-col h-full min-h-screen max-w-screen-xl mx-auto w-full py-20;
+        @apply flex flex-col h-full min-h-screen w-full;
     }
 
     footer.footer {
