--- a/src/styles/layouts/_layouts.scss
+++ b/src/styles/layouts/_layouts.scss
@@ -10,6 +10,6 @@
     }
 
     footer.footer {
-        @apply flex justify-center items-center w-full bg-red-400 py-8;
+        @apply flex justify-center items-center w-full bg-[#212121] py-8;
     }
 }
