update portal building owner

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 
 @import 'layouts/layouts';
 @import 'common/multiRangeSlider';
+@import 'common/horizontalScroll';
 
 @import 'base';
 @import 'utilities';
